@@ -9,7 +9,6 @@ Build.bat
 LICENSE
 Makefile
 Makefile.old
-MANIFEST
 MANIFEST.bak
 META.json
 META.yml
