@@ -1,0 +1,48 @@
+Build.PL
+Changes
+LICENSE
+MANIFEST
+META.json
+META.yml
+README
+SIGNATURE
+bin/module-provision
+lib/Module/Provision.pm
+lib/Module/Provision/Base.pm
+lib/Module/Provision/Config.pm
+lib/Module/Provision/TraitFor/AddingFiles.pm
+lib/Module/Provision/TraitFor/Badges.pm
+lib/Module/Provision/TraitFor/CPANDistributions.pm
+lib/Module/Provision/TraitFor/CreatingDistributions.pm
+lib/Module/Provision/TraitFor/PrereqDifferences.pm
+lib/Module/Provision/TraitFor/Rendering.pm
+lib/Module/Provision/TraitFor/UpdatingContent.pm
+lib/Module/Provision/TraitFor/VCS.pm
+share/01always_pass.t
+share/02pod.t
+share/03podcoverage.t
+share/05kwalitee.t
+share/06yaml.t
+share/07podspelling.t
+share/10test_script.t
+share/Build.PL
+share/Changes
+share/DZ_Build.PL
+share/MANIFEST.SKIP
+share/MI_Makefile.PL
+share/boilerplate.pm
+share/data_dumper.pm
+share/dist.ini
+share/gitcommit-msg
+share/gitignore
+share/gitpre-commit
+share/perl_localenv
+share/perl_module.pm
+share/perl_program.pl
+t/01always_pass.t
+t/02pod.t
+t/03podcoverage.t
+t/05kwalitee.t
+t/06yaml.t
+t/07podspelling.t
+t/10test_script.t
