@@ -5,7 +5,7 @@ perl                  = 5.010001
 local::lib            = 2.000014
 namespace::autoclean  = 0.22
 Class::Null           = 2.101420
-Class::Usul           = v0.56.0
+Class::Usul           = v0.59.0
 Config::Tiny          = 2.20
 CPAN::Meta            = 2.142690
 CPAN::Uploader        = 0.103004
@@ -19,7 +19,7 @@ Dist::Zilla::Plugin::ModuleBuild::Custom   = 4.16
 Dist::Zilla::Plugin::ReadmeAnyFromPod      = 0.141760
 Dist::Zilla::Plugin::Signature             = 1.100930
 Dist::Zilla::Plugin::VersionFromModule     = 0.08
-File::DataClass       = v0.55.0
+File::DataClass       = v0.62.0
 File::ShareDir        = 1.102
 HTTP::Message         = 6.06
 LWP::Protocol::https  = 6.03
@@ -29,7 +29,7 @@ Module::Install::AutoLicense           = 0.08
 Module::Install::ReadmeFromPod         = 0.20
 Module::Install::ReadmeMarkdownFromPod = 0.03
 Module::Metadata      = 1.000011
-Moo                   = 1.006000
+Moo                   = 2.000001
 Perl::Version         = 1.013
 Pod::Eventual         = 0.094001
 Software::License     = 0.103010
@@ -37,7 +37,7 @@ Template              = 2.26
 Test::Requires        = 0.08
 Try::Tiny             = 0.22
 Type::Tiny            = 1.000004
-Unexpected            = v0.36.0
+Unexpected            = v0.38.0
 
 [Prereqs / ConfigureRequires]
 version           = 0.88
@@ -74,17 +74,25 @@ filename          = README.md
 location          = root
 type              = markdown
 
+[Run::BeforeBuild]
+run               = cp .build.PL Build.PL
+
+[CopyFilesFromBuild]
+copy              = Build.PL
+move              = cpanfile
+
+[GatherDir]
+exclude_filename  = cpanfile
+
 ; So apparently order matters
 [ReadmeAnyFromPod]
 [Signature]
-[ShareDir]
-[GatherDir]
 [AbstractFromPOD]
 [LicenseFromModule]
 [VersionFromModule]
 [ModuleBuild::Custom]
+[CPANFile]
 [License]
-[MetaConfig]
 [MetaJSON]
 [MetaYAML]
 [ManifestInRoot]
